sumo/tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between edge 'SC_fwd_connector' and edge 'CW_bwd_connector' found.
